--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 zeppelin_version: 0.7.0
 
 zeppelin_mirror: http://apache.mirror.digitalpacific.com.au
-zeppelin_src_file: "zeppelin-{{ zeppelin_version }}-bin-netinst.tgz"
+zeppelin_src_file: "zeppelin-{{ zeppelin_version }}-bin-all.tgz"
 zeppelin_url: "{{ zeppelin_mirror }}/zeppelin/zeppelin-{{ zeppelin_version }}/{{ zeppelin_src_file }}"
 
 zeppelin_install_spark: no
